Fix responsividade telas grandes

--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
             <div class="container">
                 <ul class="cidades"></ul>
             </div>
+
+            <div id="space"></div>
         </section>
     </body>
     <script src="js/script.js"></script>
